# ytmusicapi-rs

./: .gitignore  Cargo.toml  README.md  changelog.md  license  readme.md
examples/: add_song_to_playlist.rs  create_playlist.rs  delete_playlist.rs  get_liked_songs.rs  like_song.rs  list_playlists.rs  move_playlist_items.rs  oauth_device_flow.rs  playlist_items.rs  remove_playlist_items.rs  unlike_song.rs
src/: auth.rs  client.rs  context.rs  error.rs  lib.rs  nav.rs
src/parsers/: mod.rs  navigation.rs  playlist.rs  track.rs
src/types/: common.rs  mod.rs  playlist.rs  song.rs
