[package]
name = "ytmusicapi"
version = "0.1.0"
edition = "2021"
description = "Rust client for YouTube Music API - playlist reading focused"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "gzip"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha1 = "0.10"
chrono = "0.4"
futures = "0.3"
async-stream = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
