[package]
name = "ytmusicapi"
version = "0.4.1"
edition = "2024"
description = "Rust client for YouTube Music API"
license = "MIT"
keywords = ["youtube", "music", "api", "ytmusic", "youtube-music"]
categories = ["api-bindings", "multimedia::audio", "web-programming::http-client"]
repository = "https://github.com/11philip22/ytmusicapi-rs"
documentation = "https://docs.rs/ytmusicapi"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "gzip"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha1 = "0.10"
chrono = "0.4"
futures = "0.3"
async-stream = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
